# twilio-sms-api

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
app/: TwilioSmsClient.py  __init__.py  data_models.py  emoji_generator.py  logger.py  settings.py  twilio_rest_demo.py
app/config/: twilio_sms_example.toml
config/: twilio_sms_example.toml
src/twilio_sms_api/: __init__.py  twilio_rest_demo.py
src/twilio_sms_api/util/: data_models.py  emoji_generator.py  logger.py  settings.py
tests/: test_parse_settings.py
