[tool.poetry]
name = "twilio_sms_api_py"
version = "1.2.9"
description = "DEMO: send/parse text messages with Twilio API"
authors = ["Emile Averill <cloud.dev.apps@averille.com>"]
repository = "https://github.com/averille-demo/twilio_sms_api_py"
readme = "README.md"
license = "MIT"
keywords = ["Twilio", "SMS", "text", "messaging", "REST"]

[tool.poetry.dependencies]
python = "^3.11.0"
emoji = "*"
requests = "*"
pendulum = "*"
pydantic = "*"
twilio = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"

[tool.black]
line-length = 120
target-version = ["py311"]
quiet = "True"

[tool.isort]
py_version = 311
profile = "black"
combine_as_imports = true
use_parentheses = true
src_paths = ["app", "tests"]
skip = [".gitignore", ".dockerignore"]
line_length = 120
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
files = "*.py"
mypy_path = "app"
explicit_package_bases = false
namespace_packages = false
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
disable_error_code = [
    "import"
]

[tool.pydocstyle]
convention = "google"

[tool.pylint.messages_control]
max-line-length = 120
extension-pkg-allow-list = ["pydantic"]
disable = [
    "consider-using-dict-items",
    "consider-iterating-dictionary",
    "logging-fstring-interpolation",
    "invalid-name",
    "no-self-argument",
    "no-name-in-module",
]

[tool.pytest.ini_options]
pythonpath = [".", "app"]
testpaths = [".", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
