[tool.poetry]
authors = ["Emile Averill <cloud.apps@averille.dev>"]
description = "DEMO: send/parse text messages with Twilio API"
keywords = ["SMS", "Twilio", "messaging", "text"]
license = "MIT"
name = "twilio-sms-api"
packages = [
    {from = "src", include = "twilio_sms_api"},
]
readme = "README.md"
repository = "https://github.com/averille-demo/twilio-sms-api"
version = "1.3.4"

[tool.poetry.dependencies]
emoji = "*"
pendulum = "*"
pydantic = "*"
pydantic-settings = "*"
python = "^3.12"
requests = "*"
structlog = "*"
twilio = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
toml-sort = "*"

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    ".vscode",
]
include = [
    "pyproject.toml",
    "src/**/*.py",
]
line-length = 120
# enable pydocstyle errors/warnings, isort, and pylint
select = ["E", "I", "PL", "W"]
src = ["src", "test"]
target-version = "py312"

[tool.black]
line-length = 120
quiet = false
target-version = ["py312"]

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
line_length = 120
profile = "black"
py_version = 312
skip = [".dockerignore", ".gitignore", ".venv"]
src_paths = ["src", "tests"]
use_parentheses = true

[tool.tomlsort]
all = true
in_place = true
no_sort_tables = true
sort_inline_arrays = true
sort_inline_tables = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.mypy]
disable_error_code = [
    "import",
]
explicit_package_bases = false
files = "*.py"
ignore_missing_imports = true
mypy_path = "src"
namespace_packages = false
no_implicit_optional = true
pretty = true
python_version = "3.12"
show_error_codes = true

[tool.pydocstyle]
convention = "google"

[tool.pylint.messages_control]
disable = [
    "import-error",
    "invalid-name",
    "logging-fstring-interpolation",
    "no-self-argument",
]
extension-pkg-allow-list = ["pydantic"]
max-line-length = 120

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = [".", "tests"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
