[tool.poetry]
authors = ["Emile Averill <cloud.apps@averille.dev>"]
description = "DEMO: send/parse text messages with Twilio API"
keywords = ["SMS", "Twilio", "messaging", "text"]
license = "MIT"
name = "twilio-sms-api"
packages = [
    {from = "src", include = "twilio_sms_api"},
]
readme = "README.md"
repository = "https://github.com/averille-demo/twilio-sms-api"
version = "1.3.4"

[tool.poetry.dependencies]
emoji = "*"
pendulum = "*"
pydantic = "*"
pydantic-settings = "*"
python = "^3.12"
requests = "*"
structlog = "*"
twilio = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
toml-sort = "*"

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    ".vscode",
]
include = [
    "pyproject.toml",
    "src/**/*.py",
]
line-length = 120
# enable pydocstyle errors/warnings, isort, and pylint
select = [
    "E", # pycodestyle (error)
    "I", # isort
    "PL", # pylint
    "W", # pycodestyle (warning)
]
src = ["src", "test"]
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.isort]
combine-as-imports = true

[tool.tomlsort]
all = true
in_place = true
no_sort_tables = true
sort_inline_arrays = true
sort_inline_tables = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.mypy]
disable_error_code = [
    "import",
]
explicit_package_bases = false
files = "*.py"
ignore_missing_imports = true
mypy_path = "src"
namespace_packages = false
no_implicit_optional = true
pretty = true
python_version = "3.12"
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = [".", "tests"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
